@@ -4,6 +4,7 @@
 * NEW:
    * Add new subtitle format - thx Holmgeir
    * Add new subtitle (Excel) format - thx Jecy
+   * Add new subtitle (json) format - thx Maksim
    * Add shortcuts for Tools menu items Split/Append/Join - thx z3us
    * Add shortcuts for "Merge line with same text/time-code" - thx Mike
    * Add shortcuts "Set end and pause" + "Export to PAC" - thx Milenko
